fixed some warnings discovered by the inspector